feat(joke): added new joke API: HumorAPI

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ APPLICATION_ID= # Your bot application id
 SERVER_GUID= # Your server ID
 MONGODB_URI= # URI to connect MongoDB database
 MONGODB_DB_NAME= # Main database for komputer bot
+RAPID_API_KEY= # OPTIONAL! API key for RapidAPIs. In project is use: HumorAPI
