refactor(general): reactivated project in go version

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DISCORD_BOT_TOKEN= # Discord Bot Token
 APPLICATION_ID= # Your bot application id
 SERVER_GUID= # Your server ID
 MONGODB_URI= # URI to connect MongoDB database
+MONGODB_DB_NAME= # Main database for komputer bot
+RAPID_API_KEY= # OPTIONAL! API key for RapidAPIs. In project is use: HumorAP
