--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,6 +11,12 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -27,12 +33,11 @@ jobs:
             type=semver,pattern={{version}},value=v1.0.0
       
       - name: Build and push Docker image
-        uses: mr-smithers-excellent/docker-build-push@v6.2
+        uses: docker/build-push-action@v5
         with:
-          image: wittano/komputer-bot
+          context: .
           platform: linux/amd64,linux/arm64,linux/arm/v7
-          registry: docker.io
-          addLatest: true
-          dockerfile: ./Dockerfile
+          file: ./Dockerfile
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
