--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ SERVER_GUID= # Your server ID
 MONGODB_URI= # URI to connect MongoDB database
 MONGODB_DB_NAME= # Main database for komputer bot
 RAPID_API_KEY= # OPTIONAL! API key for RapidAPIs. In project is use: HumorAP
+WEB_API_BASE_URL= # OPTIONAL! Base url to web api
+CACHE_AUDIO_DIR= # OPTIONAL! Path to dictionary for local storage audio
