--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,3 @@
-# TODO Update pipeline
 name: Go
 on:
   push:
@@ -14,7 +13,5 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.22'
-    - name: Build
-      run: go build -v ./...
     - name: Test
-      run: go test -v ./...
+      run: go test -race -v ./...
